testing 100vh to fix bg img jumping on mobile

--- a/css/reiki.css
+++ b/css/reiki.css
@@ -14,7 +14,7 @@ body {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #439bc1;
+  background-color: #e7eef4;
 }
 
 .reiki-section {
